<resources>
    <string name="app_name">To do list</string>
    <string name="search">Search</string>
    <string name="today_s_tasks">Today\'s tasks</string>
    <string name="add_todo">add todo</string>
    <string name="dialog_title_view_todo">Todo Details</string>
    <string name="dialog_title_add_todo">Add Todo</string>
    <string name="dialog_title_update_todo">Update Todo</string>
    <string name="label_title">Title</string>
    <string name="hint_description">Description here ( optional )</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_update">update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="selected_item_to_delete">You will not be able to recover this todo! \n Todo: %1$s \n time: %2$s - date:%3$s</string>
    <string name="delete_confirmation">Are you sure?</string>
    <string name="btn_delete">Yes, delete it!</string>
    <string name="hint_time_and_date">Time and Date</string>
    <string name="input_holder_time_and_date">%1$s, %2$s - %3$s</string>
    <string name="input_required">Input Required!</string>
    <string name="no_description">No Description</string>
    <string name="close">Close</string>
    <string name="label_description">Description:</string>
    <string name="todo_status">Status: %1$s</string>
</resources>