<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_week"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/edittext_search_bg"
            android:hint="@string/search"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/rv_week"
            tools:ignore="RtlSymmetry" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_today_tasks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/today_s_tasks"
            android:textColor="#444444"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/search_bar" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fa_add_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/light_yellow"
            android:contentDescription="@string/add_todo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_todo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_today_tasks"
            app:layout_constraintStart_toStartOf="@+id/tv_today_tasks"
            app:layout_constraintTop_toBottomOf="@+id/tv_today_tasks"
            tools:itemCount="200"
            tools:listitem="@layout/item_todo" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>